--- a/app/src/main/res/layout/activity_artisan_products.xml
+++ b/app/src/main/res/layout/activity_artisan_products.xml
@@ -50,7 +50,7 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/search_edittext"
+                android:id="@+id/txtSearchField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName" />
