--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -17,7 +17,7 @@
         android:padding="12dp">
 
         <ImageView
-            android:id="@+id/product_image"
+            android:id="@+id/productImage"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="centerCrop"
@@ -27,14 +27,14 @@
             tools:src="@drawable/hero" />
 
         <TextView
-            android:id="@+id/product_name"
+            android:id="@+id/productName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:textAppearance="?attr/textAppearanceTitleSmall"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/product_image"
-            app:layout_constraintTop_toTopOf="@id/product_image"
+            app:layout_constraintStart_toEndOf="@id/productImage"
+            app:layout_constraintTop_toTopOf="@id/productImage"
             app:layout_constraintEnd_toStartOf="@id/item_total_price"
             tools:text="Nome do Produto" />
 
@@ -44,9 +44,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:textAppearance="?attr/textAppearanceBodySmall"
-            app:layout_constraintStart_toEndOf="@id/product_image"
-            app:layout_constraintTop_toBottomOf="@id/product_name"
-            app:layout_constraintEnd_toEndOf="@id/product_name"
+            app:layout_constraintStart_toEndOf="@id/productImage"
+            app:layout_constraintTop_toBottomOf="@id/productName"
+            app:layout_constraintEnd_toEndOf="@id/productName"
             tools:text="Current ro..." />
 
         <TextView
@@ -57,7 +57,7 @@
             android:textAppearance="?attr/textAppearanceBodyMedium"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/product_name"
+            app:layout_constraintTop_toTopOf="@id/productName"
             tools:text="R$1.028,58" />
 
         <LinearLayout
@@ -67,7 +67,7 @@
             android:orientation="horizontal"
             android:layout_marginTop="8dp"
             android:gravity="center_vertical"
-            app:layout_constraintStart_toStartOf="@id/product_name"
+            app:layout_constraintStart_toStartOf="@id/productName"
             app:layout_constraintTop_toBottomOf="@id/product_subtitle">
 
             <com.google.android.material.button.MaterialButton
