--- a/app/src/main/res/layout/product_card_item.xml
+++ b/app/src/main/res/layout/product_card_item.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/product_image"
+            android:id="@+id/productImage"
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:scaleType="centerCrop"
@@ -28,7 +28,7 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/product_name"
+                android:id="@+id/productName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
@@ -45,7 +45,7 @@
                 tools:text="R$1.028,58" />
 
             <TextView
-                android:id="@+id/product_description"
+                android:id="@+id/productDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
