--- a/app/src/main/res/layout/activity_artisan_products.xml
+++ b/app/src/main/res/layout/activity_artisan_products.xml
@@ -53,7 +53,8 @@
                 android:id="@+id/txtSearchField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textColorLink="#FF9800" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
