--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,7 +37,8 @@
                 android:id="@+id/txtEditEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColorLink="#FF9800" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -55,7 +56,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Perfil"
                 android:inputType="none"
-                android:text="Escolha uma opção..." />
+                android:text="Escolha uma opção..."
+                android:textColorLink="#FF9800" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,7 +74,8 @@
                 android:id="@+id/txtEditPasswordLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:textColorLink="#FF9800" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,7 +92,8 @@
                 android:id="@+id/repeat_password_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:textColorLink="#FF9800" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,6 +108,7 @@
             android:textStyle="bold"
             app:backgroundTint="#FF9800"
             app:cornerRadius="16dp" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
