--- a/app/src/main/res/layout/artisan_product_item.xml
+++ b/app/src/main/res/layout/artisan_product_item.xml
@@ -90,7 +90,7 @@
                 style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Edit"
+                android:text="Editar"
                 android:textColor="#FF9800"
                 app:icon="@drawable/ic_edit"
                 app:iconTint="#FF9800"
@@ -102,7 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Delete"
+                android:text="Deletar"
                 android:textColor="#F44336"
                 app:icon="@drawable/ic_delete"
                 app:iconTint="#F44336"
